--- a/Ui.Desktop/BookSearchWindow.xaml
+++ b/Ui.Desktop/BookSearchWindow.xaml
@@ -7,23 +7,25 @@
         xmlns:viewModels="clr-namespace:De.HsFlensburg.ClientApp011.Logic.Ui;assembly=Logic.Ui"
         xmlns:bookViewModel="clr-namespace:De.HsFlensburg.ClientApp011.Logic.Ui.Wrapper;assembly=Logic.Ui"
         xmlns:cmd="http://schemas.microsoft.com/xaml/behaviors"
-        Title="BookSearchWindow" Height="768" Width="1024" MinWidth="850" MinHeight="350">
-    <cmd:Interaction.Triggers>
-        <cmd:EventTrigger EventName="Loaded">
-            <cmd:InvokeCommandAction Command="{Binding WindowLoaded}" />
-        </cmd:EventTrigger>
-    </cmd:Interaction.Triggers>
+        Title="BookSearchWindow" Name="BookSearchWindowName" 
+        Height="768" Width="1024" MinWidth="850" MinHeight="350">
     <Window.Resources>
         <bookViewModel:BookViewModel x:Key="bookViewModel"></bookViewModel:BookViewModel>
     </Window.Resources>
     <Window.DataContext>
-        <Binding Source="{StaticResource ViewModelLocator}" 
+        <Binding Source="{StaticResource ViewModelLocator}"
                 Path="TheBookSearchWindowViewModel">
         </Binding>
     </Window.DataContext>
     <Window.IsEnabled>
         <Binding Source="{StaticResource MessageListener}" Path="BindablePropery"></Binding>
     </Window.IsEnabled>
+    <cmd:Interaction.Triggers>
+        <cmd:EventTrigger EventName="Loaded">
+            <cmd:InvokeCommandAction Command="{Binding WindowLoaded}"
+                                     CommandParameter="{Binding ElementName=ComboBoxDockPanel}"/>
+        </cmd:EventTrigger>
+    </cmd:Interaction.Triggers>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="120"/>
@@ -39,7 +41,7 @@
                 <RowDefinition/>
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBox Grid.Column="0" Grid.Row="0" Height="30" 
+            <TextBox Grid.Column="0" Grid.Row="0" Height="30"
                      Text="Titel, Autor, Stichwort, ISBN, .."
                      VerticalAlignment="Center" Margin="10">
                 <cmd:Interaction.Triggers>
@@ -54,25 +56,29 @@
             <Button Grid.Column="1" Grid.Row="0" Width="120" Height="30" Margin="10"
                     HorizontalAlignment="Right" VerticalAlignment="Center"
                     Command="{Binding ShowNovelties}">Neuheiten</Button>
-            <DockPanel Grid.Column="0" Grid.Row="1"
+            <DockPanel Grid.Column="0" Grid.Row="1" Name="ComboBoxDockPanel"
                        HorizontalAlignment="Left" VerticalAlignment="Center">
-                <ComboBox Name="RatingComboBox" Text="Bewertung"      
-                          IsReadOnly="True" IsEditable="True"                  
+                <ComboBox Name="RatingComboBox" Text="{Binding RatingComboBoxText}"
+                          IsReadOnly="True" IsEditable="True"        
                           Width="120" Height="30"
                           Margin="10 0 0 0">
-                    <ComboBoxItem>1 Stern</ComboBoxItem>
-                    <ComboBoxItem>2 Sterne</ComboBoxItem>
-                    <ComboBoxItem>3 Sterne</ComboBoxItem>
-                    <ComboBoxItem>4 Sterne</ComboBoxItem>
-                    <ComboBoxItem>5 Sterne</ComboBoxItem>
+                    <ComboBoxItem Content="1 Stern" Tag="1"/>
+                    <ComboBoxItem Content="2 Sterne" Tag="2"/>
+                    <ComboBoxItem Content="3 Sterne" Tag="3"/>
+                    <ComboBoxItem Content="4 Sterne" Tag="4"/>
+                    <ComboBoxItem Content="5 Sterne" Tag="5"/>
+                    <cmd:Interaction.Triggers>
+                        <cmd:EventTrigger EventName="SelectionChanged">
+                            <cmd:InvokeCommandAction Command="{Binding ShowSpecificRating}" 
+                                                     PassEventArgsToCommand="True"/>
+                        </cmd:EventTrigger>
+                    </cmd:Interaction.Triggers>
                 </ComboBox>
-                <ComboBox Name="FormatComboBox" Text="Buchart"
+                <ComboBox Name="FormatComboBox" Text="{Binding FormatComboBoxText}"
                           IsReadOnly="True" IsEditable="True"                     
-                          Width="120" Height="30"
-                          IsSynchronizedWithCurrentItem="True" 
+                          Width="120" Height="30"                        
                           Margin="10 0 0 0" 
-                          ItemsSource="{Binding FormatValues, Source={StaticResource bookViewModel}}"
-                          SelectedItem="{Binding Format, Mode=TwoWay, Source={StaticResource bookViewModel}}">
+                          ItemsSource="{Binding FormatValues, Source={StaticResource bookViewModel}}">
                     <cmd:Interaction.Triggers>
                         <cmd:EventTrigger EventName="SelectionChanged">
                             <cmd:InvokeCommandAction Command="{Binding ShowSpecificFormat}" 
@@ -80,15 +86,12 @@
                         </cmd:EventTrigger>
                     </cmd:Interaction.Triggers>
                 </ComboBox>
-                <ComboBox Name="GenreComboBox" Text="Genre"
+                <ComboBox Name="GenreComboBox" Text="{Binding GenreComboBoxText}"
                           IsReadOnly="True" IsEditable="True"         
                           Width="120" Height="30"
-                          Margin="10 0 0 0"
-                          IsSynchronizedWithCurrentItem="True"                 
+                          Margin="10 0 0 0"              
                           ItemsSource="{Binding Source={StaticResource bookViewModel},
-                                                Path=GenreValues}"
-                          SelectedItem="{Binding Source={StaticResource bookViewModel},
-                                                 Path=Genre, Mode=TwoWay}">
+                                                Path=GenreValues}">
                     <cmd:Interaction.Triggers>
                         <cmd:EventTrigger EventName="SelectionChanged">
                             <cmd:InvokeCommandAction Command="{Binding ShowSpecificGenre}"
@@ -99,44 +102,61 @@
             </DockPanel>
             <Button Grid.Column="1" Grid.Row="1" Width="120" Height="30" Margin="10"
                     HorizontalAlignment="Right" VerticalAlignment="Center"
-                    Command="{Binding ResetFilter}">Filter Zurücksetzen</Button>
+                    Command="{Binding ResetFilter}"
+                    CommandParameter="{Binding ElementName=ComboBoxDockPanel}">Filter Zurücksetzen</Button>
         </Grid>
         <!-- Filtered Book Collection -->
-        <ListView Grid.Row="1" Name="filteredList"
-                  HorizontalContentAlignment="Stretch"
-                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                  ItemsSource="{Binding Path = FilteredBookCollection}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Border Name="border" BorderBrush="Black" BorderThickness="1"
-                            Padding="5" Margin="5" CornerRadius="8">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition Width="120"/>
-                                <ColumnDefinition Width="120"/>
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Title}"
-                                       TextWrapping="Wrap" Margin="12,0,0,6"/>
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Genre}"
-                                       Margin="12,0,0,6"/>
-                            <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Language}"
-                                       Margin="12,0,0,6"/>
-                            <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Author}"
-                                       Margin="12,0,0,6" />
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Rating}"
-                                       Margin="12,0,0,6"/>
-                            <TextBlock Grid.Column="3" Grid.RowSpan="2" Text="{Binding Description}"
-                                       TextWrapping="Wrap" Margin="12,0,0,6" />
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+            <!--Book list-->
+            <ListView Grid.Row="0" Name="filteredList"
+                      HorizontalContentAlignment="Stretch"
+                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                      ItemsSource="{Binding Path = FilteredBookCollection}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Border Name="border" BorderBrush="Black" BorderThickness="1"
+                                Padding="5" Margin="5" CornerRadius="8">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="120"/>
+                                    <ColumnDefinition Width="120"/>
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Title}"
+                                           TextWrapping="Wrap" Margin="12,0,0,6"/>
+                                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Genre}"
+                                           Margin="12,0,0,6"/>
+                                <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Language}"
+                                           Margin="12,0,0,6"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Author}"
+                                           Margin="12,0,0,6" />
+                                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Rating}"
+                                           Margin="12,0,0,6"/>
+                                <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding Publisher}"
+                                           Margin="12,0,0,6"/>
+                                <TextBlock Grid.Column="3" Grid.RowSpan="2" Text="{Binding Description}"
+                                           TextWrapping="Wrap" Margin="12,0,0,6" />
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <!--Numer of Books-->
+            <WrapPanel Grid.Row="1" HorizontalAlignment="Right">
+                <TextBlock Margin="0 0 10 0">Anzahl Bücher:</TextBlock>
+                <TextBlock Margin="0 0 10 0" Text="{Binding FilteredBookCollection.Count}"/>
+                <TextBlock Margin="0 0 10 0">von</TextBlock>
+                <TextBlock Margin="0 0 10 0" Text="{Binding BookCollection.Count}"/>
+            </WrapPanel>
+        </Grid>
     </Grid>
 </Window>
