--- a/Ui.Desktop/NewBookEntryWindow.xaml
+++ b/Ui.Desktop/NewBookEntryWindow.xaml
@@ -9,14 +9,6 @@
         mc:Ignorable="d"
         Title="Neues Buch anlegen" Height="450" Width="800"
         x:Name="NewBookWindow">
-    <Window.Resources>
-        <!--<viewModels:NewBookViewModel x:Key="NewBookViewModel"></viewModels:NewBookViewModel>-->
-        <!--<ObjectDataProvider x:Key="Enums" MethodName="GetValues" ObjectType="{x:Type core:Enum}">
-            <ObjectDataProvider.MethodParameters>
-                <x:Type Type="ENUMS:Genre" />
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>-->
-    </Window.Resources>
     <Window.DataContext>
         <Binding Source="{StaticResource ViewModelLocator}" Path="TheNewBookViewModel"></Binding>
     </Window.DataContext>
@@ -50,7 +42,7 @@
                       SelectedItem="{Binding BookVM.Genre }"
                       VerticalAlignment="Center"></ComboBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Preisempfehlung</Label>
-            <TextBox x:Name="Price" VerticalAlignment="Center" Text="{Binding BookVM.Price, StringFormat='#0.00 €'}" />
+            <TextBox x:Name="Price" VerticalAlignment="Center" Text="{Binding BookVM.Price}" />
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Kurzbeschreibung</Label>
             <TextBox VerticalAlignment="Center"  Text="{Binding BookVM.Description}"></TextBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Einband</Label>
@@ -63,8 +55,8 @@
             <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Publisher}"></TextBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Seitenzahl</Label>
             <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Pages}"></TextBox>
-            <Label VerticalAlignment="Center" HorizontalAlignment="Right">Gewicht</Label>
-            <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Weight, StringFormat={}{0} g}"></TextBox>
+            <Label VerticalAlignment="Center" HorizontalAlignment="Right">Gewicht (in g)</Label>
+            <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Weight}"></TextBox>
         </UniformGrid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
@@ -76,13 +68,13 @@
             <Label Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right">Maße (in mm)</Label>
             <Label Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Width="20">H</Label>
             <TextBox Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40" 
-                     Text="{Binding BookVM.Dimension.Height, StringFormat='#0 mm'}"></TextBox>
+                     Text="{Binding BookVM.Dimension.Height}"></TextBox>
             <Label Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Width="20">B</Label>
             <TextBox Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40"
-                     Text="{Binding BookVM.Dimension.Width, StringFormat='#0 mm'}"></TextBox>
+                     Text="{Binding BookVM.Dimension.Width}"></TextBox>
             <Label Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Width="20">T</Label>
             <TextBox Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40"
-                     Text="{Binding BookVM.Dimension.Depth, StringFormat={}{0} mm}"></TextBox>
+                     Text="{Binding BookVM.Dimension.Depth}"></TextBox>
         </Grid>
         <UniformGrid Grid.Column="1" Grid.Row="1" Rows="7">
             <Label VerticalAlignment="Top" HorizontalAlignment="Right">ISBN</Label>
@@ -97,7 +89,7 @@
                       ItemsSource="{Binding BookVM.LanguageValues}"
                       SelectedItem="{Binding BookVM.Language}"></ComboBox>
             <Label VerticalAlignment="Top" HorizontalAlignment="Right">Leseprobe</Label>
-            <TextBox TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" Text="{Binding BookVM.Extract}"></TextBox>
+            <TextBox TextWrapping="NoWrap" Text="{Binding BookVM.Extract}"></TextBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Bestseller</Label>
             <CheckBox VerticalAlignment="Center" IsChecked="{Binding BookVM.Bestseller}"></CheckBox>
         </UniformGrid>
@@ -107,9 +99,9 @@
         </UniformGrid>
         <UniformGrid Grid.Column="0" Grid.Row="3">
             <Button VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="200" Height="40"
-                    Command="{Binding AddBook}" CommandParameter="{Binding ElementName=NewBookGrid}">Save</Button>
+                    Command="{Binding AddBook}" CommandParameter="{Binding ElementName=NewBookGrid}">Speichern</Button>
             <Button VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="200" Height="40"
-                    Command="{Binding CloseWindow}" CommandParameter="{Binding ElementName=NewBookWindow}">Cancle</Button>
+                    Command="{Binding CloseWindow}" CommandParameter="{Binding ElementName=NewBookWindow}">Abbrechen</Button>
         </UniformGrid>
     </Grid>
 </Window>
