--- a/Ui.Desktop/ErrorWindow.xaml
+++ b/Ui.Desktop/ErrorWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="ErrorWindow" Height="150" Width="300">
     <Grid>
-        <TextBlock Margin="10" TextWrapping="Wrap" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <TextBlock Margin="10" TextWrapping="Wrap" TextAlignment="Center" 
+                   VerticalAlignment="Center" HorizontalAlignment="Center">
             Die von Ihnen ausgewählten Bücher sind bereits im Verzeichnis hochgeladen!</TextBlock>
     </Grid>
 </Window>
