--- a/Ui.Desktop/BookSearchWindow.xaml
+++ b/Ui.Desktop/BookSearchWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.BookSearchWindow"
+﻿<!--Book search feature of the BookManager-->            
+<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.BookSearchWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -41,6 +42,7 @@
                 <RowDefinition/>
                 <RowDefinition />
             </Grid.RowDefinitions>
+            <!--Textsearch filter-->
             <TextBox Grid.Column="0" Grid.Row="0" Height="30"
                      Text="Titel, Autor, Stichwort, ISBN, .."
                      VerticalAlignment="Center" Margin="10">
@@ -51,13 +53,16 @@
                     </behaviors:EventTrigger>
                 </behaviors:Interaction.Triggers>
             </TextBox>
+            <!--Bestseller filter-->
             <Button Grid.Column="1" Grid.Row="0" Width="120" Height="30"
                     Command="{Binding ShowBestseller}">Bestseller</Button>
+            <!--Novelties filter-->
             <Button Grid.Column="1" Grid.Row="0" Width="120" Height="30" Margin="10"
                     HorizontalAlignment="Right" VerticalAlignment="Center"
                     Command="{Binding ShowNovelties}">Neuheiten</Button>
             <WrapPanel Grid.Column="0" Grid.Row="1" Name="ComboBoxWrapPanel"
                        HorizontalAlignment="Left" VerticalAlignment="Center">
+                <!--Rating filter-->
                 <ComboBox Name="RatingComboBox" Text="{Binding RatingComboBoxText}"
                           IsReadOnly="True" IsEditable="True"        
                           Width="120" Height="30"
@@ -74,6 +79,7 @@
                         </behaviors:EventTrigger>
                     </behaviors:Interaction.Triggers>
                 </ComboBox>
+                <!--Format filter-->
                 <ComboBox Name="FormatComboBox" Text="{Binding FormatComboBoxText}"
                           IsReadOnly="True" IsEditable="True"                     
                           Width="120" Height="30"                        
@@ -86,6 +92,7 @@
                         </behaviors:EventTrigger>
                     </behaviors:Interaction.Triggers>
                 </ComboBox>
+                <!--Genre filter-->
                 <ComboBox Name="GenreComboBox" Text="{Binding GenreComboBoxText}"
                           IsReadOnly="True" IsEditable="True"         
                           Width="120" Height="30"
@@ -99,6 +106,7 @@
                     </behaviors:Interaction.Triggers>
                 </ComboBox>
             </WrapPanel>
+            <!--Reset filter-->
             <Button Grid.Column="1" Grid.Row="1" Width="120" Height="30" Margin="10"
                     HorizontalAlignment="Right" VerticalAlignment="Center"
                     Command="{Binding ResetView}"
@@ -116,6 +124,7 @@
                       ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       ItemsSource="{Binding Path = FilteredBookCollection}">
                 <ListView.ItemTemplate>
+                    <!--List design-->
                     <DataTemplate>
                         <Border Name="border" BorderBrush="Black" BorderThickness="1"
                                 Padding="5" Margin="5" CornerRadius="8">
