--- a/Ui.Desktop/NewBookEntryWindow.xaml
+++ b/Ui.Desktop/NewBookEntryWindow.xaml
@@ -104,8 +104,7 @@
         </UniformGrid>
         <UniformGrid Grid.Column="0" Grid.Row="3">
             <Button VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="200" Height="40"
-                    Command="{Binding AddBook}" 
-                    CommandParameter="{Binding ElementName=NewBookGrid}">Speichern</Button>
+                    Command="{Binding AddBook}">Speichern</Button>
             <Button VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="200" Height="40"
                     Command="{Binding CloseWindow}" 
                     CommandParameter="{Binding ElementName=NewBookWindow}">Abbrechen</Button>
